# anitomy-rs

./: Cargo.toml
src/: element.rs  keyword.rs  utils.rs
src/parser/: common.rs  episode.rs  episode_title.rs  file_checksum.rs  file_extension.rs  keywords.rs  mod.rs  part.rs  release_group.rs  season.rs  title.rs  video_resolution.rs  volume.rs  year.rs
tests/: data.json  parser.rs
