[package]
name = "anitomy"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "0.13.1", features = ["macros", "uncased"] }
uncased = "0.9.10"
regex = "1"
serde = { version = "1.0.200", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
anitomy = { path = ".", features = ["serde"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"

[features]
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen"]
